# hackatime-heatmap

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  nixpacks.toml
frontend/: package-lock.json  package.json
frontend/src/: app.css  app.html
frontend/src/lib/: SyntaxHighlight.svelte
frontend/src/routes/: +page.svelte
src/: main.rs  palette.rs  pallete.rs  template.html  time.rs  utils.rs
