[package]
name = "hackatime-heatmap"
version = "0.1.1"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[dependencies]
axum = { version = "0.8.4", features = ["query"] }
chrono = "0.4.41"
chrono-tz = "0.10.4"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.219"
svg = "0.18.0"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["catch-panic"] }
tracing-subscriber = "0.3.20"
