[package]
name = "hackatime-heatmap"
description = "Easy to set up Hackatime coding activity heatmap for your profile!"
version = "0.3.6"
edition = "2024"
license = "AGPL-3.0-only"
readme = "./README.md"
homepage = "https://hackatime-heatmap.shymike.dev"
repository = "https://github.com/ImShyMike/hackatime-heatmap"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[dependencies]
axum = { version = "0.8.8", features = ["query", "tokio", "original-uri", "http1", "http2"], default-features = false }
chrono = { version = "0.4.43", features = ["now"], default-features = false }
chrono-tz = { version = "0.10.4", default-features = false }
moka = { version = "0.12.13", features = ["sync"], default-features = false }
reqwest = { version = "0.13.2", features = ["json", "rustls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"], default-features = false }
svg = { version = "0.18.0", default-features = false }
tokio = { version = "1.49.0", features = ["rt-multi-thread"], default-features = false }
tower = { version = "0.5.3", default-features = false }
tower-http = { version = "0.6.2", features = ["catch-panic", "cors", "decompression-gzip", "compression-gzip", "timeout", "normalize-path"], default-features = false }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.22", features = ["fmt"], default-features = false }
metrics = { version = "0.24", default-features = false }
metrics-exporter-prometheus = { version = "0.18.1", features = ["http-listener"], default-features = false }
resvg = { version = "0.47.0", default-features = false }
